# cpp-starter-project-cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeTargets.json  CMakeUserPresets.json  LICENSE.md  README.md  clean-cmake.bat  clean-cmake.sh  run-cmake.bat  run-cmake.sh
cmake/helpers/: CodeAnalysisGenModule.cmake  DocGenModule.cmake  ExportGenModule.cmake  PackageGenModule.cmake  TestGenModule.cmake  Uninstall.cmake.in  UninstallGenModule.cmake  cmake_uninstall.cmake.in
cmake/internal/: GenerateTargetStatusSummary.cmake  ImportExternalDependency.cmake  ImportInternalDependency.cmake  PrintPathList.cmake  PrintProjectConfigurationSummary.cmake  PrintStringList.cmake  PrintTargetPropertiesSummary.cmake  PrintTargetStatusSummaries.cmake  Project.cmake  TargetDependency.cmake  UserInput.cmake  ValidateUserInputs.cmake
cmake/legacy/: DocGenerator.cmake  DocOptions.cmake  ExportGenerator.cmake  TestGenerator.cmake
cmake/modules/: BinaryTarget.cmake  BundleBinTarget.cmake  CMakeTargetsFile.cmake  CMakeTargets_sample.json  Debug.cmake  Dependency.cmake  Directory.cmake  DumpCMakeVariables.cmake  FileManip.cmake  FindQt5CoreMacrosCustom.cmake  FindQt5WidgetsMacrosCustom.cmake  FuncDebug.cmake  FuncDependency.cmake  FuncPrint.cmake  ImportBuildTreeLibTargets.cmake.in  ImportInstallTreeLibTargets.cmake.in  Map.cmake  Print.cmake  ScanSubFolders.cmake  StringManip.cmake  schema.json
cmake/project/: CMakeOptions.txt  CPackInstallerConfig.cmake  CPackInstallerOptions.cmake.in  Dependencies.cmake  DependenciesExternalOptions.cmake  DependenciesInternalOptions.cmake  DependenciesOptions.cmake  DoxygenConfig.in  ExportConfig.cmake.in  HeadersAndSourcesOptions.cmake  InstallerConfig.cmake  PackageConfig.cmake.in  PackageOptions.cmake  ProjectSrcFiles.cmake  StandardOptions.txt
cmake/rules/: RulesCustom.cmake  RulesGeneric.cmake  RulesLibQt.cmake  RulesLibQt6.cmake
cmake/templates/: PackageGeneratorConfig.cmake.in
cmake/toolchains/: ClangOptions.cmake  GccOptions.cmake  Linux_clang.cmake  Linux_gcc.cmake  VsOptions.cmake  Windows_clang.cmake  Windows_gcc.cmake  Windows_msvc.cmake  Windows_vs.cmake  x64-linux-clang.cmake  x64-linux_gcc.cmake  x64-windows-mingw32-clang.cmake  x64-windows-mingw32-gcc.cmake  x64-windows-msvc.cmake
cmake/toolchains/compiler/: clang.cmake  gcc.cmake  msvc.cmake
include/project-name/: include1.h  include_2.h
lib/googletest/: googletest.cmake
src/: CMakeLists.txt  MainBinTarget.cmake  main.cpp  main.h  project-name_pch.cpp  project-name_pch.h  source1.cpp  source1.h  source2.cpp  source2.h  source3.cpp  source3.h  source4.cpp  source4.h  source5.cpp  source5.h  source_1.cpp  source_1.h  source_2.cpp  source_2.h  source_3.cpp  source_3.h  source_4.cpp  source_4.h  source_5.cpp  teste.cpp
src/sub/: sub.cpp
src/sub1/: sub1.cpp  sub1.h
src/sub2/: sub2.cpp
src/sub_1/: source_sub_1.cpp
src/sub_2/: source_sub_2.cpp  source_sub_2.h
tests/: source1_test.cpp
